# HTMLCure

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml  requirements.txt
benchmark/: README.md  tc_selection_20260430_6000.json
benchmark/en/: apps_tools.jsonl  content_marketing.jsonl  data_visualization.jsonl  games_simulations.jsonl  three_d_webgl.jsonl  visual_art_animation.jsonl
benchmark/zh/: apps_tools.jsonl  content_marketing.jsonl  data_visualization.jsonl  games_simulations.jsonl  three_d_webgl.jsonl  visual_art_animation.jsonl
configs/: api_provider.example.yaml  eval.example.yaml  local_vllm.example.yaml  models.example.yaml  refine.example.yaml
docs/: architecture.md  benchmark_design.md  evaluation_protocol.md
examples/: run_eval_only.sh
examples/responses/: sample_responses.jsonl
htmleval/: __init__.py  __main__.py
htmleval/batch/: orchestrator.py
htmleval/benchmark/: __init__.py  analysis.py  generator.py  loader.py  metrics.py  models.py  runner.py  taxonomy.py
htmleval/concurrency/: browser_pool.py  rate_limiter.py
htmleval/core/: __init__.py  config.py  context.py  page_safety.py  phase.py  pipeline.py  screenshot.py
htmleval/phases/: extract.py
htmleval/viewer/: __init__.py  __main__.py  _app.py  scanner.py  server.py
htmlrefine/: __init__.py  cli.py
htmlrefine/core/: __init__.py  config.py
htmlrefine/data_pipeline/: curator.py
htmlrefine/server/: app.py
scripts/analysis/: audit_benchmark_solidity.py  audit_bilingual_alignment.py  build_tc_pass_matrix.py  rescore_drop_cov_tc_rend_0430.py
tests/: test_public_packaging.py
(+65 files in other folders)
